# ssdp-connect

./: CMakeLists.txt  README.md  premake5.lua  ssdp-connect.c  ssdp-connect.h  ssdp.c  ssdp.h
example/: socket_helper.h  ssdp-client-example.c  ssdp-server-example.c
